# memoflow

./: .gitignore  LICENSE  README.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
data/: memo.json  settings.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/Checkbox/: CircleCheckbox.vue
src/components/GlassCard/: GlassCard.vue
src/components/MemoPanel/: MemoPanel.vue
src/components/RichTextToolbar/: RichTextToolbar.vue
src/components/SaveToast/: SaveToast.vue
src/components/TodoPanel/: TodoPanel.vue
src/components/WindowBar/: WindowBar.vue
src/pages/Home/: HomePage.vue
src/store/feedback/: feedbackStore.ts
src/store/memo/: memoStore.ts
src/store/theme/: themeStore.ts
src/store/todo/: todoStore.ts
src/styles/: base.css  reset.css  theme.css
src/types/: memo.ts  settings.ts  todo.ts
src/utils/environment/: isTauri.ts
src/utils/function/: debounce.ts
src/utils/id/: createId.ts
src/utils/richText/: richText.ts
src/utils/storage/: jsonStorage.ts  storageFiles.ts
src/utils/theme/: applyTheme.ts
src/utils/window/: windowLifecycle.ts
