[package]
name = "memoflow"
version = "0.1.0"
description = "A lightweight Windows desktop memo widget."
authors = ["MemoFlow"]
edition = "2021"
license = "MIT"
repository = ""
default-run = "memoflow"
rust-version = "1.77.2"

[lib]
name = "memoflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
